feature: player write in es6/reactJs

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -17,7 +18,7 @@
   </head>
   <body>
     <div class="feedcast-player"
-      media-url="https://nerdcast-cdn.jovemnerd.com.br/Teaser_NC_549_Nerdcast_Radio_News.mp3"></div>
+      media-url="http://canal42.tv/podcast/canal42-s02e33-black-mirror-temporada-3.mp3"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
