feature: Adjust style and attributes on the player

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,9 @@
   </head>
   <body>
     <div class="feedcast-player"
-      media-url="http://canal42.tv/podcast/canal42-s02e33-black-mirror-temporada-3.mp3"></div>
+      data-media-url="https://nerdcast.jovemnerd.com.br/Teaser_NC_549_Nerdcast_Radio_News.mp3"
+      data-download-url="https://nerdcast.jovemnerd.com.br/Teaser_NC_549_Nerdcast_Radio_News.mp3"
+      data-next-episode="http://www.google.com"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
