feature: improvements at the layout and js behavior

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <title>React App</title>
     <style>
       html{
-        background-color: yellow
+        background-color: #fff
       }
     </style>
   </head>
