--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,10 @@
       html{
         background-color: #fff
       }
+      html, body{
+        margin: 0px;
+        padding: 0px;
+      }
     </style>
   </head>
   <body>
